[gd_scene load_steps=8 format=2]

[ext_resource path="res://_src/World/Race.gd" type="Script" id=1]
[ext_resource path="res://_src/World/road.png" type="Texture" id=2]
[ext_resource path="res://_src/Entities/Card/card_slot.png" type="Texture" id=3]
[ext_resource path="res://_src/Entities/Cars/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://_src/Font/pixelsix10.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://_src/Music and Sound/Music/in_game.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Race" type="Node"]

script = ExtResource( 1 )

[node name="Road" type="Node" parent="." index="0"]

editor/display_folded = true

[node name="Road1" type="Sprite" parent="Road" index="0"]

position = Vector2( 0, 119 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Visible" type="VisibilityNotifier2D" parent="Road/Road1" index="0"]

position = Vector2( 10, 10 )
rect = Rect2( -10, -10, 20, 20 )
_sections_unfolded = [ "Transform" ]

[node name="Road2" type="Sprite" parent="Road" index="1"]

position = Vector2( 0, -449 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Visible" type="VisibilityNotifier2D" parent="Road/Road2" index="0"]

position = Vector2( 10, 10 )
rect = Rect2( -10, -10, 20, 20 )

[node name="Road3" type="Sprite" parent="Road" index="2"]

position = Vector2( 0, -1017 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Visible" type="VisibilityNotifier2D" parent="Road/Road3" index="0"]

position = Vector2( 10, 10 )
rect = Rect2( -10, -10, 20, 20 )

[node name="Card Slots" type="Node" parent="." index="1"]

[node name="Slot1" type="Position2D" parent="Card Slots" index="0"]

position = Vector2( 698, 140 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot" type="Sprite" parent="Card Slots/Slot1" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot2" type="Position2D" parent="Card Slots" index="1"]

position = Vector2( 858, 140 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot2" type="Sprite" parent="Card Slots/Slot2" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot3" type="Position2D" parent="Card Slots" index="2"]

position = Vector2( 1018, 140 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot3" type="Sprite" parent="Card Slots/Slot3" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot4" type="Position2D" parent="Card Slots" index="3"]

position = Vector2( 1178, 140 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot4" type="Sprite" parent="Card Slots/Slot4" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot5" type="Position2D" parent="Card Slots" index="4"]

position = Vector2( 698, 360 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot5" type="Sprite" parent="Card Slots/Slot5" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot6" type="Position2D" parent="Card Slots" index="5"]

position = Vector2( 858, 360 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot6" type="Sprite" parent="Card Slots/Slot6" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot7" type="Position2D" parent="Card Slots" index="6"]

position = Vector2( 1018, 360 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot7" type="Sprite" parent="Card Slots/Slot7" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot8" type="Position2D" parent="Card Slots" index="7"]

position = Vector2( 1178, 360 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot8" type="Sprite" parent="Card Slots/Slot8" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot9" type="Position2D" parent="Card Slots" index="8"]

position = Vector2( 698, 580 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot9" type="Sprite" parent="Card Slots/Slot9" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot10" type="Position2D" parent="Card Slots" index="9"]

position = Vector2( 858, 580 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot10" type="Sprite" parent="Card Slots/Slot10" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot11" type="Position2D" parent="Card Slots" index="10"]

position = Vector2( 1018, 580 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot11" type="Sprite" parent="Card Slots/Slot11" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Slot12" type="Position2D" parent="Card Slots" index="11"]

position = Vector2( 1178, 580 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="card_slot12" type="Sprite" parent="Card Slots/Slot12" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Obstacles" type="Node" parent="." index="2"]

[node name="Player" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 300, 314 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Left" type="Position2D" parent="." index="4"]

position = Vector2( 180, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Middle" type="Position2D" parent="." index="5"]

position = Vector2( 300, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Right" type="Position2D" parent="." index="6"]

position = Vector2( 420, 0 )
_sections_unfolded = [ "Transform" ]

[node name="HonkTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="SpawnTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="Score" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 606.0
margin_right = 939.0
margin_bottom = 18.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Music" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = true
mix_target = 2
bus = "Music"

[connection signal="screen_exited" from="Road/Road1/Visible" to="." method="_on_Road_screen_left" binds= [ "Road1" ]]

[connection signal="screen_exited" from="Road/Road2/Visible" to="." method="_on_Road_screen_left" binds= [ "Road2" ]]

[connection signal="screen_exited" from="Road/Road3/Visible" to="." method="_on_Road_screen_left" binds= [ "Road3" ]]

[connection signal="timeout" from="HonkTimer" to="." method="_on_HonkTimer_timeout"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]


